# OperatingSystems

helloworld/: Makefile  build.cmd  build.sh  main.cpp
lab4_5/: CMakeLists.txt  main.cpp  server.hpp  simulator.cpp  socket.hpp  test.cpp
lab4_5/html/: index.html  test.html
task three/: CMakeLists.txt  main.cpp  processes.hpp  readme.md
task1/: Makefile  README.md  build.cmd  build.sh  func.cpp  func.hpp  main.cpp  main0.cpp
task1/liba2/: CMakeLists.txt  build.sh
task2/: CMakeLists.txt  background.cpp  background.hpp  error.cpp  main.cpp  readme.md  subprogram  subprogram.cpp  task2.code-workspace
task4_5/: CMakeLists.txt  main.cpp  processes.hpp  readme.md  serial.hpp  server.hpp  sim_logs.py  simulator.cpp  task45.code-workspace  test.cpp  utility.hpp
task4_5/css/: temp.css
task4_5/html/: 404.html  index.html  test.html
task4_5/html/data/: index.html
task4_5/html/sec/: index.html
task4_5/html/test/: index.html
task4_5/js/: get_temp.js
task6/: .gitignore  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  task6.pro
task6/Localization/: task6_en_US.qm  task6_en_US.ts  task6_ru_RU.qm  task6_ru_RU.ts
task6/Network/: client.cpp  client.h
task6/Utility/: config.h  parser.cpp  parser.h
task6/Widgets/: aboutwidget.h  aboutwidget.ui  changeserverwidget.cpp  changeserverwidget.h  changeserverwidget.ui
task6_7/: QtTemp.desktop  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
task6_7/Localization/: loc_readme.txt  task6_en_US.ts
task6_7/Network/: clientmanager.cpp  clientmanager.h
task6_7/Utility/: config.h  parser.h
task6_7/Widgets/: aboutwidget.cpp
